
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 char* astrblank ;
 scalar_t__ toupper (char const) ;

int astrcmpi(const char *str1, const char *str2)
{
 if (!str1)
  str1 = astrblank;
 if (!str2)
  str2 = astrblank;

 do {
  char ch1 = (char)toupper(*str1);
  char ch2 = (char)toupper(*str2);

  if (ch1 < ch2)
   return -1;
  else if (ch1 > ch2)
   return 1;
 } while (*str1++ && *str2++);

 return 0;
}
